# sift-video

./: .gitignore  .gitmodules  README.md  docker-compose.gpu.yml  docker-compose.yml  setup.sh
.github/workflows/: docker.yml
services/embedding/: .dockerignore  Dockerfile  README.md
services/embedding/src/: main.cpp
services/ingestion/: .dockerignore  Dockerfile  README.md
services/ingestion/src/: main.cpp
services/query_engine/: .dockerignore  Cargo.toml  Dockerfile  README.md
services/query_engine/src/: api.rs  db.rs  main.rs  models.rs
shared/schemas/: embedding.json  info.md  search_response.json  transcript.json
