[package]
name = "query_engine"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
axum = { version = "0.7.9", features = ["macros", "multipart"] }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.100"
qdrant-client = "1.16.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "chrono"] }
open_clip_inference = { version = "0.3.0" }
uuid = { version = "1.22.0", features = ["v4"] }
tower-http = { version = "0.6.8", features = ["fs"] }
tokio-util = { version = "0.7.18", features = ["io"] }
futures = "0.3.32"
async-stream = "0.3.6"
